<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B1D5E7"
    tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/aboutid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/abouthead"
        android:textSize="25dp"></TextView>
    <TextView
        android:id="@+id/aboutid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:padding="7dp"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/aboutid3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/about2"
        android:textSize="20dp"></TextView>
    <TextView
        android:id="@+id/aboutid4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/about3"
        android:textSize="20dp"></TextView>
    <TextView
        android:id="@+id/aboutid5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/about4"
        android:textSize="20dp"></TextView>
    <TextView
        android:id="@+id/aboutid6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/developer"
        android:textSize="18dp"
        android:textStyle="italic"></TextView>
    <TextView
        android:id="@+id/aboutid7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="7dp"
        android:text="@string/devinfo"
        android:textSize="18dp"
        android:textStyle="italic"></TextView>
    <TextView
        android:id="@+id/aboutid8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="7dp"
        android:text="@string/devinfo2"
        android:textSize="18dp"
        android:textStyle="italic"></TextView>
    <TextView
        android:id="@+id/aboutid9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/other"
        android:textSize="22dp"
        android:textStyle="italic"></TextView>

</LinearLayout>